--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 			}
 			#div1{
-				background-color: #4C4C4C;
+				background-color: #202F48;
 				width: 700px;
 				height: 50px;
 				text-align: center;
@@ -22,7 +22,7 @@
 				padding-top: 20px;
 			}
 			#div2{
-				background-color: #225E79;
+				background-color: #565656;
 				width: 180px;
 				border: none;
 				height: 550px;
@@ -84,7 +84,7 @@
                 padding-top: 15px;
                 padding-bottom: 15px;
 			}
-			#vk{
+			a{
 				color: turquoise;
 			}
 			.div3{
@@ -180,9 +180,9 @@
 				<div id="beer">Пивасик</div>
 				<div id="adr"><u><b>Контакты</b></u></div>
 				<ul id="vk">
-					<li><u>Vk</u></li>
-					<li><u>Ok</u></li>
-					<li><u>Facebook</u></li>
+					<li><a href="https://www.vk.com">Vk</a></li>
+					<li><a href="https://www.ok.ru">Ok</a></li>
+					<li><a href="https://www.facebook.com">Facebook</a></li>
 				</ul>
 			</div>
 		<div class="div3">
